--- a/A-Z/Exams/TestVision/22-23/4_Complete-instruction_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/4_Complete-instruction_22-23.html
@@ -71,134 +71,10 @@
         </li>
     </ul>
     <div id="tab-0" style="padding: 20px; padding-left: 30px; background: #ffffff;"">
-        <div class="grid-row">
-            <div class="col-xs-12 col-md-6">
-                <div class="styleguide-section__grid-demo-element">
-                    <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; height: 475px; background-color: #fafafa; padding-right: 20px;">
-                        <div class="content-box pad-box-mini border border-b">
-                            <h4>
-                                <span style="color: #0645ad;">
-                                    <span style="font-size: 16pt;"><em>I want to use TestVision</em></span>
-                                </span>
-                            </h4>
-                        </div>
-                        <ul>
-                            <li><strong>Notify your programme coordinator as early as possible.</strong>
-                                <ul>
-                                    <li>The programme coordinators will schedule the exam to the roster. Our team must book in all details according to the roster at least 7 weeks before the start of the test/retake/inspection.</li>
-                                </ul>
-                            </li>
-                            <br>
-                            <li><strong>Take a look at our instructions</strong>
-                                <ul>
-                                    <li>Get to know TestVision in 6 steps.</li>
-                                    <li>Click on the tiles above to view the instructions.</li>
-                                    <li>Take a look at our deadlines on the right.</li>
-                                </ul>
-                            </li>
-                            <br>
-                            <li><strong>Get in contact with ICTO</strong>
-                                <ul>
-                                    <li>If you would like to schedule a short intake or meeting to get to know TestVision.</li>
-                                    <li>If you would like to gain access to your course folders in TestVision (if we haven't done so already).</li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-12 col-md-6">
-                <div class="styleguide-section__grid-demo-element">
-                    <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; height: 475px; background-color: #fafafa;">
-                        <div class="content-box pad-box-mini border border-b">
-                            <h4>
-                                <span style="color: #0645ad;">
-                                    <span style="font-size: 16pt;"><em>Deadlines</em></span>
-                                </span>
-                            </h4>
-                        </div>
-                        <ul>
-                            <li><strong>7 workdays prior to the exam</strong>
-                                <ul>
-                                    <li>
-                                        <span style="text-decoration: underline;"><em>Step 1</em></span>, <span style="text-decoration: underline;"><em>Step 2</em></span>, and <span style="text-decoration: underline;"><em>Step 3</em></span>
-                                    </li>
-                                </ul>
-                            </li>
-                            <br>
-                            <li><strong>Moment of examination</strong>
-                                <ul>
-                                    <li>
-                                        <span style="text-decoration: underline;"><em>Step 4</em></span>
-                                    </li>
-                                </ul>
-                            </li>
-                            <br>
-                            <li><strong>Assessment and Inspection</strong>
-                                <ul>
-                                    <li>
-                                        <span style="text-decoration: underline;"><em>Step 5</em></span> and <span style="text-decoration: underline;"><em>Step 6</em></span>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div styyle="float: center; margin-bottom: 15px;">
-            <span style="font-size: 12pt;"><em>For more substantive questions about your exam, please contact the Examination Board.</em></span>
-            <p>&nbsp;</p>
-
-            <span style="color: #000000; margin-right: 10px;">
-                <span class="element_toggler btn btn" aria-controls="inloggen" aria-label="Toggler toggle list visibility" aria-expanded="false">
-                    <i class="icon-info"></i><em><span style="font-size: 15pt;">&nbsp;</span></em> How to login to TestVision
-                </span>
-            </span>
-            <span style="color: #000000;  margin-right: 10px;">
-                <span class="element_toggler btn btn" aria-controls="toetsbeheer" aria-label="Toggler toggle list visibility" aria-expanded="false">
-                    <i class="icon-info"></i><em><span style="font-size: 15pt;">&nbsp;</span></em> Administration
-                </span>
-            </span>
-
-            <ul id="inloggen" style="list-style: none; display: none;">
-                <li>
-                    <div class="content-box">
-                        <p>
-                            <span style="font-size: 14pt;"><strong>Login</strong></span>
-                        </p>
-                        <p>
-                            <span style="font-size: 12pt;">
-                                <a href="#menustap1">Login to TestVision</a>
-                            </span>
-                        </p>
-                        <p>
-                            <span style="font-size: 12pt;">
-                                <a href="#menu2">TestVision: the basics</a>
-                            </span>
-                        </p>
-                        <p>&nbsp;</p>
-                    </div>
-                </li>
-            </ul>
-            <ul id="toetsbeheer" style="list-style: none; display: none;">
-                <li>
-                    <div class="content-box">
-                        <p>
-                            <span style="font-size: 14pt;"><strong>Administration</strong></span>
-                        </p>
-                        <p>
-                            <a class="Button" style="width: 70%;" title="Ik ben toetsbeheerder" href="https://canvas.uva.nl/groups/67316/pages/icto-4-eoss" data-api-endpoint="https://canvas.uva.nl/api/v1/groups/67316/pages/icto-4-eoss" data-api-returntype="Page"><strong>I am studyadvisor / programme co&ouml;rdinator / OWAS</strong></a>
-                        </p>
-                        <strong>
-                            <a class="Button" style="width: 70%;" title="Ik ben toetsbeheerder" href="https://canvas.uva.nl/groups/68082/pages/icto-testvision-handleiding" data-api-endpoint="https://canvas.uva.nl/api/v1/groups/68082/pages/icto-testvision-handleiding" data-api-returntype="Page">I work for ICTO</a>
-                        </strong>
-                        <p>&nbsp;</p>
-                        <p>&nbsp;</p>
-                    </div>
-                </li>
-            </ul>
-        </div>
+        <p><span style="font-size: 16pt;"><em><b>Get to know TestVision in 6 steps</b></em></span></p>
+        <p><span style="font-size: 13pt;"><em>These instructions provide detailed information about the use of TestVision. In case you need (or want) to create the exam without ICTO, you can use these instructions to make sure all the right settings are performed.</em></span></p>
+        <p><span style="font-size: 13pt;"><em>For more substantive questions about your exam, please contact the Examination Board.</em></span></p>
+        <p>&nbsp;</p>
     </div>
     <div id="tab-1">
         <span style="font-size: 18pt;"><strong>Outline of exam</strong></span>
@@ -288,7 +164,7 @@
             <div style="position: relative; top: -20px; left: -20px; padding: 20px; background: #ffffff; border: 2px solid #cccccc;">
                 <h4>
                     <span style="font-size: 13pt;"><strong>
-                            <a href="#menu13">Moment of exam</a>
+                            <a href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination">Moment of exam</a>
                         </strong></span>
                 </h4>
                 <p>
@@ -365,7 +241,7 @@
                 <p>&nbsp;</p>
                 <p>
                     <span style="font-size: 13pt;"><strong>
-                            <a href="#menu22">Information about the moment of inspection</a>
+                            <a href="https://canvas.uva.nl/courses/8175/pages/inspection">Information about the moment of inspection</a>
                         </strong></span>
                 </p>
                 <p>
@@ -713,7 +589,7 @@
 </div>
 <p>&nbsp;</p>
 <p><strong>
-        <a id="menu8"></a>
+        <a id="menustap8"></a>
         <span style="font-size: 10pt; color: #ffffff;">&hellip;</span>
     </strong></p>
 <p>
