Witruimte toegevoegd onderaan pagina's; Home: to do's/voortgang items bijgewerkt (in masterplan)

--- a/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
@@ -2,59 +2,59 @@
 MASTERPLAN DIGITAAL TOETSEN
 --------------------------------------------------------------------------------------------------------
 Homepage
--- Data toetsen doorgeven iets vroeger zetten
--- Onderaan pagina meer enters plaatsen zodat je bij Tips&tricks niet naar boven wordt geduwd
+-- [X] Data toetsen doorgeven iets vroeger zetten 
+-- [X] Onderaan pagina meer enters plaatsen zodat je bij Tips&tricks niet naar boven wordt geduwd 
 -- Tab Instructions:
----- tekstvakken weghalen
----- Design aanpassen, misschien toch buttons
----- Je moet iets beter zien wat de bedoeling/proces is
--- New in TestVision! item toevoegen
--- Inzage -> wanneer moet je dit uiterlijk hebben doorgegeven?
+---- [X] tekstvakken weghalen
+---- [X] Design aanpassen, misschien toch buttons
+---- [_] Je moet iets beter zien wat de bedoeling/proces is
+-- [_Robyn mee bezig_] New in TestVision! item toevoegen
+-- [_] Inzage -> wanneer moet je dit uiterlijk hebben doorgegeven?
 --------------------------------------------------------------------------------------------------------
 Algemeen:
--- Vragen+Toets & Nakijken is iets anders (want daar moet je iets doen) ten opzichte van de FAQ toetsmoment. Dat willen we inzichtelijker maken.
--- Inzage item moet nog gemaakt worden (iets wat niet echt instructie is maar meer lijkt op een FAQ)
+-- [_] Vragen+Toets & Nakijken is iets anders (want daar moet je iets doen) ten opzichte van de FAQ toetsmoment. Dat willen we inzichtelijker maken.
+-- [_] Inzage item moet nog gemaakt worden (iets wat niet echt instructie is maar meer lijkt op een FAQ)
 --------------------------------------------------------------------------------------------------------
 Uitgebreide instructie (oude instructie):
--- Stap 1: Design -> weghalen
--- Stap 4: Moment of examination -> vervangen voor link naar huidige FAQ instructie
--- Stap 6: Inzage -> vervangen voor link naar nieuwe FAQ inzage instructie
+-- [_] Stap 1: Design -> weghalen
+-- [_] Stap 4: Moment of examination -> vervangen voor link naar huidige FAQ instructie
+-- [_] Stap 6: Inzage -> vervangen voor link naar nieuwe FAQ inzage instructie
 --------------------------------------------------------------------------------------------------------
 Vragen+Toets:
 V
--- I'm working with TestVision for the first time. What does the general process look like? (+ waaronder: how do I access TestVision)
--- How do I edit a question? (+ waaronder: How can I change the name of a question? + PUBLISH changes in de toets)
--- How can I add a question? -> hieruit moet duidelijk worden dat je ICTO mailt!!!!?!?@?@##@: maar ook linkje uitgebreide instructie hoe je het zelf kunt doen in case of emergency
--- What kind of question types can I use?
+-- [_] I'm working with TestVision for the first time. What does the general process look like? (+ waaronder: [_] how do I access TestVision)
+-- [_] How do I edit a question? (+ waaronder: [_] How can I change the name of a question? + [_] PUBLISH changes in de toets)
+-- [_] How can I add a question? -> hieruit moet duidelijk worden dat je ICTO mailt!!!!?!?@?@##@: maar ook linkje uitgebreide instructie hoe je het zelf kunt doen in case of emergency
+-- [_] What kind of question types can I use?
 T
--- Which basic settings are there in a test? (+ Instructietekst waar kan ik die zien? dit onderdeel moet mooi, bondig en overzichtelijke checklist zijn)
--- What if I'd like to use different settings in a test? -> hieruit moet duidelijk worden dat je ICTO mailt maar ook weer linkje uitgebreide instructie hoe je zelf kunt doen in case of emergency
+-- [_] Which basic settings are there in a test? (+ Instructietekst waar kan ik die zien? dit onderdeel moet mooi, bondig en overzichtelijke checklist zijn)
+-- [_] What if I'd like to use different settings in a test? -> hieruit moet duidelijk worden dat je ICTO mailt maar ook weer linkje uitgebreide instructie hoe je zelf kunt doen in case of emergency
 CHECK
--- Final check (+ waaronder: tentamen moet op synchroon staan, how to preview the exam)
--- Twijfel? NEEM CONTACT OP!!!##
+-- [_] Final check (+ waaronder: tentamen moet op synchroon staan, how to preview the exam)
+-- [_] Twijfel? NEEM CONTACT OP!!!##
 --------------------------------------------------------------------------------------------------------
 FAQ moment van toets:
 Is KLAAR :-D
 --------------------------------------------------------------------------------------------------------
 Assessment:
--- Beoordelen (mini toevoeging ergens aan de zijkant/"can't see this menu achtig"-> Geen toegang? Beoordelaars doorgeven per mail aan icto-csw@uva.nl)
--- Resultaten/scores zien? -> Valideren
--- Cijfers
----- Het staat al in Final Grades: hoe bereik je die? (add existing assignment + retrieve TVO grades)
----- Optioneel: Hoe maak je een export? (+ Import naar Canvas)
+-- [_] Beoordelen (mini toevoeging ergens aan de zijkant/"can't see this menu achtig"-> Geen toegang? Beoordelaars doorgeven per mail aan icto-csw@uva.nl)
+-- [_] Resultaten/scores zien? -> Valideren
+-- [_] Cijfers
+---- [_] Het staat al in Final Grades: hoe bereik je die? (add existing assignment + retrieve TVO grades)
+---- [_] Optioneel: Hoe maak je een export? (+ Import naar Canvas)
 --------------------------------------------------------------------------------------------------------
 Inzage:
 -- Voor design: kijk naar onze oude instructie, moet ongeveer dezelfde inhoud bevatten maar wel hetzelfde design als de FAQ toetsmoment
--- Plus nieuw item toevoegen: overzicht verschil tussen ingeboekte inzage & geen geboekte Inzage
---- Verschillende levels of inzages met beschrijving voordelen/nadelen, denk aan schema die op de OPC informatie pagina in sharepoint staat
+-- [_] Plus nieuw item toevoegen: overzicht verschil tussen ingeboekte inzage & geen geboekte Inzage
+--- [_] Verschillende levels of inzages met beschrijving voordelen/nadelen, denk aan schema die op de OPC informatie pagina in sharepoint staat
 --- Stel je kiest voor eigen inzage:
------ Stuur een mail naar ICTO met wensen datum + tijd (maakt niet uit wanneer en hoe lang, mag je zelf weten)
------ ICTO stel inzage in en zet in het eigen overzicht en 3 dagen voor anvang ontvang je een automatische mail met alle instructies en info
------ Locatie doet er niet toe: je kunt kiezen om het online te doen of om samen ergens met de studenten en eigen laptops te zitten
------ Ook mogelijkheid om alles geprint te doen, zie instructie X hoe
+----- [_] Stuur een mail naar ICTO met wensen datum + tijd (maakt niet uit wanneer en hoe lang, mag je zelf weten)
+----- [_] ICTO stel inzage in en zet in het eigen overzicht en 3 dagen voor anvang ontvang je een automatische mail met alle instructies en info
+----- [_] Locatie doet er niet toe: je kunt kiezen om het online te doen of om samen ergens met de studenten en eigen laptops te zitten
+----- [_] Ook mogelijkheid om alles geprint te doen, zie instructie X hoe
 --- Stel je kiest voor geboekte inzage:
------ Moet echt op tijd zijn, hier zijn de deadlines
------ Je kunt gelukkig ook nog printen
+----- [_] Moet echt op tijd zijn, hier zijn de deadlines
+----- [_] Je kunt gelukkig ook nog printen
 --------------------------------------------------------------------------------------------------------
 -->
 
@@ -139,7 +139,7 @@ Inzage:
                         <h4 style="text-align: left;"><strong>Book an appointment with us!</strong></h4>
                     </div>
                     <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; height: auto; background-color: #ffffff;">
-                        <p>We have heard from teachers that an <span style="color: #079C97;"><strong>(online or onsite) appointment of 15-20 minutes</strong></span> works best: there is time to ask questions, to pass on changes and wishes regarding the test, and to go through the question menu in TestVision together with ICTO. A meeting with ICTO gives teachers some security and we often hear: "Actually, it's not that bad". So please do not hesistate to drop by our office, email us or book an appointment. Take a look at our <a href="https://canvas.uva.nl/courses/8175/pages/contact">contact page</a> to get in touch with us.</p>
+                        <p>We have heard from teachers that an <span style="color: #079C97;"><strong>(online or onsite) appointment of 15-20 minutes</strong></span> works best: there is time to ask questions, to pass on changes and wishes regarding the test, and to go through the question menu in TestVision together with ICTO. A meeting with ICTO gives teachers some security and we often hear: "Actually, it's not that bad". So please do not hesitate to drop by our office, email us or book an appointment. Take a look at our <a href="https://canvas.uva.nl/courses/8175/pages/contact">contact page</a> to get in touch with us.</p>
                     </div>
                 </div>
             </div>
@@ -162,16 +162,27 @@ Inzage:
                         </p>
                     </div>
                 </div>
-                <!-- Deadlines -->
+                <!-- What to do -->
                 <div class="styleguide-section__grid-demo-element">
                     <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center; padding-left: 15px;">
                         <h4 style="text-align: left;"><strong>What do I need to do?</strong></h4>
                     </div>
                     <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; height: auto; background-color: #ffffff;">
                         <p>The ICTO team <span style="color: #079C97;"><strong>sets up a copy of last year's exam with copies of last year's questions and test settings</strong></span> – or if this is your first time, we'll set up concept questions and assign basic settings to the exam.</p>
-                        <p>Teachers are solely responsible for modifying the questions in TestVision. Questions can be changed by teachers until the last moment. A request for adding new questions to the test or changing test settings can be sent to ICTO up to one week before the start of the test. After this deadline, teachers can also do these things themselves with the help of a detailed instructions.</p>
+                        <p>Teachers are solely responsible for <a href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test#FAQ_Q2" target="_blank">modifying the questions</a> in TestVision. Questions can be changed by teachers until the last moment. A request for adding new questions to the test or changing test settings can be sent to ICTO up to one week before the start of the test. After this deadline, teachers can also do these things themselves with the help of <a href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test#FAQ_Q4" target="_blank">these instructions</a>.</p>
                     </div>
                 </div>
+
+                <!-- TestVision updates -->
+                <div class="styleguide-section__grid-demo-element">
+                    <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center; padding-left: 15px;">
+                        <h4 style="text-align: left;"><strong>What's new in TestVision?</strong></h4>
+                    </div>
+                    <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; height: auto; background-color: #ffffff;">
+                        <p style="color: #676767;"><i>More info coming soon...</i></p>
+                    </div>
+                </div>
+
             </div>
 
         </div>
@@ -275,8 +286,9 @@ Inzage:
                         </td>
                         <td style="width: 56.2347%;">
                             <span style="font-size: 11pt;">
-                                <p>There are roughly two ways to do the inspection: inspection with support or without support. If you want to do an inspection with support you should notify your programme coordinator way in advance (for more info, see the dates at this front page 'About')</p>
+                                <p>There are roughly two ways to do the inspection: inspection with support or without support. If you want to do an inspection with support you should notify your programme coordinator at least 7 weeks prior to the inspection date (for more info, see the dates on the 'About'-page underneath "Applying for TestVision")</p>
                                 <p><strong>The advantage of inspection with support</strong> is that it increases the possibility of reusing test questions. Without support, students can easily take a picture, screenshot or copy the test questions via laptop or phone. Printing/downloading the review is an exception but can be difficult in large courses with +200 students.</p>
+                                <!------- Ik snap de laatste zin hierboven niet helemaal ---->
                                 <p><strong>The advantage of inspection without support</strong> is that you can email us and decide to do the inspection at your own time and place. We will set up the inspection in Testvision and send you the login instructions for students.</p>
                             </span>
                         </td>
