--- a/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
@@ -198,7 +198,7 @@ Inzage:
                 <div class="col-xs-20 col-md-4">
                     <div class="styleguide-section__grid-demo-element">
                         <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; border-color: #063852; padding: 30px; padding-bottom: 50px; margin-bottom: 10px; text-align: left; height: 380px;">
-                            <span style="float: middle; font-size: 12pt; align: center;">
+                            <span style="float: middle; font-size: 12pt;">
 
                                 <!-- Titel -->
                                 <div class="content-box pad-box-mini border border-b">
@@ -221,7 +221,7 @@ Inzage:
                 <div class="col-xs-20 col-md-4">
                     <div class="styleguide-section__grid-demo-element">
                         <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; border-color: #063852; padding: 30px; padding-bottom: 50px; margin-bottom: 10px; text-align: left; height: 380px;">
-                            <span style="float: middle; font-size: 12pt; align: center;">
+                            <span style="float: middle; font-size: 12pt; ">
 
                                 <!-- Titel -->
                                 <div class="content-box pad-box-mini border border-b">
@@ -244,7 +244,7 @@ Inzage:
                 <div class="col-xs-20 col-md-4">
                     <div class="styleguide-section__grid-demo-element">
                         <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; border-color: #063852; padding: 30px; padding-bottom: 50px; margin-bottom: 10px; text-align: left; height: 380px;">
-                            <span style="float: middle; font-size: 12pt; align: center;">
+                            <span style="float: middle; font-size: 12pt;">
 
                                 <!-- Titel -->
                                 <div class="content-box pad-box-mini border border-b">
