--- a/A-Z/Exams/TestVision/22-23/2_Examination_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/2_Examination_22-23.html
@@ -93,7 +93,7 @@
 <p>&nbsp;</p>
 <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
 <h4 style="text-align: center; margin-bottom: 35px;"><strong>I made a few late adjustments to the exam in TestVision. What do I need to do?</strong></h4>
-    <p style="text-align: center; paddin:10px;">
+    <p style="text-align: center; padding:10px;">
         If you changed any details in TestVision within one week prior to the exam, please make sure to do the following: <a href="#publishchanges"><span>publish your changes</span></a>.
     </p>
     <p style="text-align: center;">
